# mrs_hector_core

./: README.md
ros_packages/: .gitman.yml  hector_slam  mrs_hector_estimator_plugin
ros_packages/mrs_hector_core/: CMakeLists.txt  package.xml
ros_packages/mrs_hector_core/launch/: hector_slam.launch  rviz.launch
ros_packages/mrs_hector_core/rviz/: default.rviz
ros_packages/mrs_hector_core/scripts/: refactor_rviz_config.sh
ros_packages/mrs_hector_core/tmux/simulation/: session.yml
ros_packages/ros_packages/: mrs_hector_estimator_plugin
